tour steps alignment fix

--- a/src/client/styles/patterns/organisms/tour.scss
+++ b/src/client/styles/patterns/organisms/tour.scss
@@ -3,7 +3,7 @@
 	background: $color-light;
 
 	&:last-child {
-		border-bottom: none;
+		border: none;
 	}
 
 	&:not(:last-child) {
@@ -38,5 +38,9 @@
 	section {
 		padding: 0;
 		background: none;
+	}
+
+	li {
+		padding-bottom: 3rem;
 	}
 }
